public/results.css
@import url('https://fonts.googleapis.com/css?family=Luckiest+Guy');

html, body {
  font-family: 'Luckiest Guy', cursive;
  width: 100%;
  height: 100%;
  margin: 0;
  padding: 0;
}

.results {
  background-color: #7EC0EE;
  height: 60%;
}

@keyframes unicorn {
  from {top: 0; left: 0;}
  to {top: 0; left: 100%;}
}

.unicorn img {
  position: relative;
  animation-name: unicorn;
  animation-timing-function: linear;
  animation-duration: 6s;
  animation-iteration-count: infinite;
}

@keyframes ani-name {
  0% {color: red;}
  16% {color: orange;}
  32% {color: yellow;}
  48% {color: green;}
  64% {color: blue;}
  80% {color: indigo;}
  100% {color: violet;}
}

.ani-name h1{
  position: relative;
  font-size: 4em;
  text-align: center;
  color: red;
  animation-name: ani-name;
  animation-duration: 6s;
  animation-iteration-count: infinite;
}

.art {
  height: 33%;
  width: 100%;
  background-color: #33a43e;
}

.author {
  height: 7%;
  width: 100%;
  background-color: #33a43e;
  color: #f5f5dc;
  text-align: center;
}

.author a {
  color: #FF0080;
  text-decoration: none;
  text-shadow: 1px 1px #f5f5dc;
}

.author a:hover {
  color: #f5f5dc;
  text-shadow: 1px 1px #FF0080;
}

